# small64

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.debug  README.md  bbsong1.c  bbsong2.c  bkg.c  build.rs  demo.c  direction.c  fractal.c  loader.h  main_debug.c  mesh.c  minidragon.h  minilib.c  minilib.h  minimath.h  minirdram.S  music.c  rdp_commands.h  rdpq_macros.h  rdram.c  rdram.h  rsp_u3d.S  rsp_u3d.rspl  rspq_triangle.inc  scroller.c  small.1.ld  small.2.ld  stage0.S  stage0_bins.S  stage1.c  stage1.h  torus.S  ucode.c
.github/workflows/: build.yml
assets/: Tomorrow-Night-chars.txt  Tomorrow-Night.txt  font.c.inc  genfont.sh  microfont.py  phrases.txt  scroller.txt
src/: cli.rs  error.rs
src/shaders/: hasher.glsl  hasher.spv  hasher.wgsl
tools/: heatmap.py  mips_free_bits.py  swizzle3.cpp  ucode_to_inc.py  xxd.py
tools/elfio/: elfio_section.hpp  elfio_symbols.hpp
tools/ipl3hasher-new/: .gitignore  README.md
tools/ipl3hasher-new/src/: cpu.rs  gpu.rs  hasher.rs  main.rs
tools/upkr/c_library/src/: lib.rs
